# adsa_g14_assignment_1

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/inventory/: products.csv  products.csv_10k
data/loyalty/: customers.csv
data/sales/: transactions.csv
logs/: customer_log.txt  optimal_tree_data.txt
scripts/: extract_datasets.py  gen_plot.py
src/pos_system/: __init__.py  __main__.py
src/pos_system/common/: Customer.py  Product.py  __init__.py  data_loader.py  interfaces.py  logger.py
src/pos_system/example/: __init__.py  binary_tree.py
src/pos_system/inventory/: __init__.py  binary_search_tree.py  binary_tree.py  improved_splay_tree.py  inventory_data_loader.py  inventory_module.py  splay_tree.py
src/pos_system/loyalty/: __init__.py  avl_tree.py  binary_tree.py
src/pos_system/sales/: UTM_BST_data.accdb  __init__.py  binary_tree.py  bst.py  btree.py
tests/: test_binary_tree.py  test_data_loader.py  test_imports.py
tests/inventory/: test_binary_search_tree.py  test_improved_splay_tree.py  test_splay_tree.py  test_tree_comparison.py  test_tree_libraries.py
